cmake_minimum_required(VERSION 3.23)
project(025WrappersAndBinders)

set(CMAKE_CXX_STANDARD 14)

add_executable(025WrappersAndBinders
        main.cpp
        callable_objects.cpp
        wrapper_function.cpp
        binder_bind.cpp
        implementing_variadic_functions.cpp
        callback_function_implementation.cpp
        alternatives_to_virtual_functions.cpp




        )
