cmake_minimum_required(VERSION 3.23)
project(012Class)

set(CMAKE_CXX_STANDARD 14)

add_executable(012Class
        class_basic.cpp
        const_decorate_func.cpp
        constructor_func.cpp
        copy_constructor.cpp
        initializer_cuslist.cpp
        main.cpp
        this_point.cpp
        static_member.cpp
        simple_object_model.cpp
        friend_basic.cpp


        )
